# icons

./: .gitignore  main.py  pyproject.toml  text
icons/: background.py  clicables.py  icons.py  show_hsv.py
