[tool.poetry]
name = "icons"
version = "0.1.0"
description = ""
authors = ["jefferson-norberto2 <jmn@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
opencv-python = "^4.10.0.84"
uiautomator2 = "^3.5.0"
rich = "^14.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
